--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-CY_DEBUG=True
-CY_ENV_NAME=development
-#CY_SECRET_KEY=
-CY_DB_DRIVER=django.db.backends.sqlite3
-CY_DB_NAME=../db.sqlite3
-#CY_DB_USER=
-#CY_DB_PASSWORD=
-#CY_DB_HOST=
-#CY_DB_PORT=
-#CY_ERROR_EMAIL_TO=
-#CY_ERROR_EMAIL_FROM=
-CY_MEDIA_ROOT=../media
-CY_LOGFILE_PATH=../backend.log
-CY_LOGFILE_LEVEL=DEBUG
-CY_SECURE_COOKIES=False
+WEB_DEBUG=True
+WEB_ENV_NAME=development
+#WEB_SECRET_KEY=
+WEB_DB_DRIVER=django.db.backends.sqlite3
+WEB_DB_NAME=../db.sqlite3
+#WEB_DB_USER=
+#WEB_DB_PASSWORD=
+#WEB_DB_HOST=
+#WEB_DB_PORT=
+#WEB_ERROR_EMAIL_TO=
+#WEB_ERROR_EMAIL_FROM=
+WEB_MEDIA_ROOT=../media
+WEB_LOGFILE_PATH=../backend.log
+WEB_LOGFILE_LEVEL=DEBUG
+WEB_SECURE_COOKIES=False
