Brought project in line with modern Django

--- a/env.example
+++ b/env.example
@@ -1,15 +1,15 @@
 WEB_DEBUG=True
 WEB_ENV_NAME=development
-#WEB_SECRET_KEY=
+WEB_SECRET_KEY=for_development_only
 WEB_DB_DRIVER=django.db.backends.sqlite3
 WEB_DB_NAME=../db.sqlite3
 #WEB_DB_USER=
 #WEB_DB_PASSWORD=
 #WEB_DB_HOST=
 #WEB_DB_PORT=
-#WEB_ERROR_EMAIL_TO=
-#WEB_ERROR_EMAIL_FROM=
+#WEB_ERROR_EMAIL_TO=admin@example.com
+#WEB_ERROR_EMAIL_FROM=server@example.com
 WEB_MEDIA_ROOT=../media
 WEB_LOGFILE_PATH=../backend.log
 WEB_LOGFILE_LEVEL=DEBUG
-WEB_SECURE_COOKIES=False
+WEB_SECURE_COOKIES=True
