More secure .env defaults

--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
-WEB_DEBUG=True
+WEB_DEBUG=False
 WEB_ENV_NAME=development
-WEB_SECRET_KEY=for_development_only
+#WEB_SECRET_KEY=
 WEB_DB_DRIVER=django.db.backends.sqlite3
 WEB_DB_NAME=../db.sqlite3
 #WEB_DB_USER=
