--- a/env.example
+++ b/env.example
@@ -9,7 +9,7 @@ WEB_DB_NAME=../db.sqlite3
 #WEB_DB_PORT=
 #WEB_ERROR_EMAIL_TO=admin@example.com
 #WEB_ERROR_EMAIL_FROM=server@example.com
-WEB_MEDIA_ROOT=../media
+#WEB_MEDIA_ROOT=../media
 WEB_LOGFILE_PATH=../backend.log
 WEB_LOGFILE_LEVEL=DEBUG
 WEB_SECURE_COOKIES=True
